@@ -1,6 +1,6 @@
 # Intermediate container for Knot DNS build (not persistent)
 FROM debian:stable AS knot-dns-build
-ARG KNOT_DNS_VERSION=v2.7.2
+ARG KNOT_DNS_VERSION=v2.7.6
 
 # Build dependencies
 ENV KNOT_DNS_BUILD_DEPS git-core build-essential libtool autoconf pkg-config \
